--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   overlay_support: ^2.1.0
   fluttertoast: ^8.2.2
   carousel_slider: ^4.2.1
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
